@@ -2,9 +2,7 @@
  <?php echo $this->smartmobileHeader(array('logout' => true, 'portal' => true, 'title' => _("Folders"))) ?>
 
  <div data-role="content">
-  <ul data-role="listview" data-filter="true" id="imp-folders-list">
-   <?php echo $this->tree ?>
-  </ul>
+  <ul data-role="listview" data-filter="true" id="imp-folders-list"></ul>
  </div>
 
  <div data-role="footer" class="ui-bar" data-position="fixed" data-tap-toggle="false">
